ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|         - AWStats:                                              |
|               * apache: check if stats are working with FastCGI |
|               * apache: set statsdir if awstats is enabled      |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-07-20 Raphael Geissert
	- GUI:
		* Fixed #505: Notice message on page class.pTemplate.php
	- DOCS
		* Fixed #503: gcc is missing on Fedora-package
	- SETUP:
		* Added the VHCS2 remover for the migration script

2007-07-19 Raphael Geissert
	- CONFIGS:
		* Fixed #498: </IfModule> without matching <IfModule> section
	- SETUP:
		* Fixed #502: on every reinstall ispcp adds localhost as nameserver to /etc/resolv.conf
	- GUI:
		* Fixed error where the order panel sends the notification for the reseller to the client
	- ENGINE:
		* Fixed #497: Make mail homedirs unique per user (thanks to fenn_b@smktech.com.au for the patch)

2007-07-18 Raphael Geissert
	- CONFIGS:
		* Fixed #494: email from webmaster@gui
		* Fixed #397: Running ispcp-setup in an already installed system duplicates the cronjobs
	- SETUP:
		* Fixed #489: /lib/iptables/libipt_ISPCP_INPUT.so missing
	- ENGINE:
		* Added doHashSQL
	- GUI:
		* When telnetd is running it is now marked with red

2007-07-17 Raphael Geissert
	- GUI:
		* Made changes to reflect fix for #465
		* Made changes to reflect fix for #483
	- ENGINE:
		* Fixed #482: Error into the script ispcp-dmn-mngr
		* Fixed #465: Error pages can't be displayed when PHP is disabled
		* Fixed #483: Domain aliases with same mount point (thanks to greg@proxyconcept.net)
	- CONFIGS:
		* Made changes to reflect fix for #465
		* Removed hardcoded /var/www/virtual path from 00_master.conf