@@ -219,7 +219,7 @@ DirCgi="{AWSTATS_ENGINE_DIR}"
 # Example: "../icon"
 # Default: "/icon" (means you must copy icon directories in "/mywwwroot/icon")
 #
-DirIcons="{AWSTATS_WEB_DIR}/icons"
+DirIcons="/awstatsicons"
 
 
 # When this parameter is set to 1, AWStats adds a button on report page to
