@@ -358,8 +358,8 @@ CREATE TABLE `login` (
   `session_id` varchar(200) default NULL,
   `ipaddr` varchar(15) default NULL,
   `lastaccess` int(10) unsigned default NULL,
-  `login_count` tinyint(1) default NULL,
-  `captcha_count` tinyint(1) default NULL,
+  `login_count` tinyint(1) default '0',
+  `captcha_count` tinyint(1) default '0',
   `user_name` varchar(255) default NULL
 ) ENGINE=MyISAM DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
 
