@@ -142,11 +142,9 @@ AWSTATS_ACTIVE = no
 # could be 'dynamic' = 0 or 'static' = 1
 AWSTATS_MODE = 0
 
-AWSTATS_DIR = /etc/awstats
-
 AWSTATS_CACHE_DIR = /var/cache/awstats
 
-AWSTATS_CONFIG_DIR = /var/www/awstats
+AWSTATS_CONFIG_DIR = /etc/awstats
 
 AWSTATS_ENGINE_DIR = /usr/lib/cgi-bin
 
