@@ -1,4 +1,4 @@
-ISPCP ω (OMEGA) HowTo Install for Debian Sarge, Etch
+ispCP ω (OMEGA) HowTo Install for Debian Sarge, Etch
 ================================================================================
 For other Linux distributions please check the other INSTALL files.
 ================================================================================
@@ -18,18 +18,18 @@ Table of Content
 ---------------
 ISPCP ω Version:	1.0.0
 INSTALL Script:		2.0
-Maintainer:		RatS
-Homepage:		http://www.isp-contol.net
+Maintainer:			RatS
+Homepage:			http://www.isp-contol.net
 Linux Distris:		Debian Sarge, Etch
 
 ================================================================================
 2) Requirements
 ---------------
-There is no must have for a system using ISPCP ω. This is only a recommendation:
+There is no must have for a system using ispCP ω. This is only a recommendation:
 
 Pentium III or K6-4 with 500 MHz
 512 MB RAM
-100 MB disk space (only for install of ISPCP ω)
+100 MB disk space (only for install of ispCP ω)
 Debian (or even any other *NIX-Distribution)
 
 All Sarge required packages are listed in ./docs/Debian/debian-packages-sarge
@@ -42,10 +42,10 @@ ISPCP ω delivers a complete hosting automation appliance by offering significan
 security, total-cost-of-ownership, and performance advantages over competing
 commercial solutions.
 
-With ISPCP ω you can configure your server and applications, create user with
+With ispCP ω you can configure your server and applications, create user with
 domains with a few point-and-click operations that take less than a minute.
 There is no limit to the number of resellers, users and domains that can be
-created. The core of ISPCP ω are 3 easy-to-use, web-based control panels. ISPCP
+created. The core of ispCP ω are 3 easy-to-use, web-based control panels. ispCP
 provides graphic user interfaces for the administrators, resellers and users.
 
 ================================================================================
@@ -92,7 +92,7 @@ Make sure you are logged in as root.
 	(when you get to the proftpd screen, select 'standalone')
 	(when you get to the rootkithunter screen, select two time 'yes')
 
-4. Now there are two ways of install ISPCP ω
+4. Now there are two ways of install ispCP ω
 
 a) via install script
 ---------------------
@@ -108,7 +108,7 @@ b) manually
 
 5. Open the ispcp.conf and make some changes.
    You have to set up some configuration variables for your linux distribution.
-   ISPCP ω is preconfigurated for Debian 3.1 Sarge.
+   ispCP ω is preconfigurated for Debian 4.0 Etch.
    If you're using another distribution please check, if config files exist in
    ./configs/dists and use/change them.
 
@@ -138,7 +138,7 @@ b) manually
 9. Start the engine setup:
 	# ./ispcp-setup
 
-10. Install ISPCP ω step-by-step
+10. Install ispCP ω step-by-step
 
 	If you get no error, all went good; if you get one, look at
 	http://isp-control.net to solve the problem.
@@ -158,7 +158,7 @@ b) manually
 5) Update
 ---------
 
-There are two ways of update ISPCP ω
+There are two ways of update ispCP ω
 
 a) via install script
 ---------------------
@@ -179,9 +179,9 @@ Please check http://isp-control.net for any questions not answered in this file.
 7) Credits
 ----------
 
-ISPCP ω is a project of ispCP | isp Control Panel.
+ispCP ω is a project of ispCP | isp Control Panel.
 Please visit our site under http://isp-control.net for further information on
-ISPCP ω, ispCP and other themes.
+ispCP ω, ispCP and other themes.
 
-We hope you enjoy using ISPCP ω. If you like it, help us, to make it better. We
+We hope you enjoy using ispCP ω. If you like it, help us, to make it better. We
 would be glad on any help provided!
